@@ -51,3 +51,4 @@
 - PIP-166 Poprawiono zliczanie zmian statusów w ostatnim okresie czasu + poprawiono obliczenia w przypadku niepoprawnych zmian statusów
 - Zmiana formatu daty w tabelce na jirowy
 - PIP-177 Refaktoring
+- PIP-182 Drobny refaktoring, optymalizacja i javadoc dla klasy generującej chart
